fix(spring): register JavaScript definition proxies for native image (#25889)
Fixes #25885

## Summary
In a Spring Boot native image, `@JsDefinition` interfaces did not work
because their dynamic proxies were never registered at build time. The
AOT processor now scans for these interfaces and registers the hints
they need.

## What changed
This is a bug fix. It is backward compatible: no public or protected API
changes, and nothing changes for apps running on the JVM.

- Flow calls a JavaScript definition through a JDK dynamic proxy. A
native image only builds proxies that are known at build time, so such a
call failed at runtime.
- The component scan the AOT processor runs skips interfaces by default,
so no `@JsDefinition` interface was found at all. Added a scan that
accepts annotated interfaces, keeping the default independence check so
a local interface — which has no canonical name to register a hint for —
stays out.
- For each definition found, the processor now registers a JDK proxy
hint and a reflection hint for its public methods.
- Refactoring: the "scan a package, then load the found classes" logic
is now shared by all three scans in the processor.

## Test summary
**JavaScript definition hints:**
- JDK proxy hint registered for an annotated interface
- Reflection hint registered for its methods

**Definition scanning:**
- Annotated interfaces found in a package

---------

Co-authored-by: totally-not-ai[bot] <290682512+totally-not-ai[bot]@users.noreply.github.com>